# LIF-Meta-integration

./: .env.example  .git-commit-msg.txt  .gitignore  CLAUDE.md  Dockerfile  FEATURES.md  README.md  backup_prod_db.py  check_db.py  fly.toml  import_data.py  import_leads.py  merge_payees.py  migrate.py  migrate_backfill_directory.py  migrate_lost_reasons.py  migrate_money_to_inr.py  netlify.toml  pyproject.toml  render.yaml  update_payments.py
.claude/: launch.json
app/: auth.py  config.py  database.py  domain.py  enums.py  main.py  models.py  rbac.py  seed.py  templating.py  validators.py
app/db/: engine.py  tables.py
app/routes/: auth.py  calendar.py  categories.py  clients.py  dashboard.py  delivery.py  events.py  expenses.py  export.py  jobs.py  leads.py  meta.py  payables.py  payees.py  portal.py  quick.py  receivables.py  reports.py  settings.py  workshop.py
app/services/: ad_analysis.py  analytics.py  assist.py  db.py  delivery.py  drive.py  email.py  excel.py  google_auth.py  lead_intake.py  lead_report.py  llm.py  meta.py  (+7 more)
dev/: rehearse_0002.py  rehearse_0003.py
docs/: migrations-runbook.md
migrations/: env.py
scripts/: fix_meta_phones.py  get_gmail_refresh_token.py  migrate_sheets_to_db.py
tests/: conftest.py  test_ad_analysis.py  test_assist.py  test_delivery.py  test_email_transport.py  test_estimates.py  test_event_schedule.py  test_followups.py  test_google_auth.py  test_hardening.py  test_lead_intake.py  test_lead_rules.py  test_new_lead_notify.py  test_rbac_whatsapp.py  test_reports.py  test_routes.py  test_triage.py  test_validators.py
(+51 files in other folders)
