[project]
name = "lif-tracker"
version = "0.1.0"
description = "Life in Frame Photography — order & expense tracker"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<5",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "matplotlib>=3.8",
    # Retained for the optional Excel→Google Sheets/Drive export feature and the
    # one-time Sheets→Postgres migration script.
    "gspread>=6.0",
    "google-auth>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
